# moltis-feishu

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  bd-guide.html  changelog.html  channels.html  configuration.html  e2e-testing.html  local-validation.html  print.html  searchindex.js  toc.html  toc.js  whatsapp.html
.github/workflows/: binary-release.yml  ci.yml  e2e.yml  release.yml
apps/macos/: CHANGELOG.md  project.yml
crates/cli/: Cargo.toml
crates/feishu/: Cargo.toml
crates/feishu/src/: auth.rs  config.rs  lib.rs  outbound.rs  plugin.rs  state.rs  ws.rs  ws_frame.rs
crates/gateway/: Cargo.toml
crates/memory/: Cargo.toml
crates/swift-bridge/: Cargo.toml
crates/tools/: Cargo.toml
crates/web/: Cargo.toml
examples/: moltis.feishu-cn-tools.example.toml  moltis.toml.example
plans/: 2026-03-01-plan-channel-architecture-registry-capabilities.md  2026-03-01-plan-contract-test-harness-for-integrations.md  2026-03-01-plan-multi-nodes.md  e2e-tests-oauth-provider-connection.md  upstream-pr-plan-2026-03-17.md
prompts/: session-2026-03-13-agent-handoff-safety.md
scripts/: check-website-install-sync.sh  download-tailwindcss-cli.sh  package-binary-release.sh  sync-website-install.sh
snap/: snapcraft.yaml
website/: .assetsignore  .gitignore  CHANGELOG.md  README.md  _worker.js  index.de.html  index.en.html  index.es.html  index.fr.html  index.html  index.it.html  index.ja.html  index.ko.html  index.pt.html  index.ru.html  index.zh.html  install.sh  llms.txt  og-card.html  package-lock.json  package.json  twitter-card.html  wrangler.jsonc
(+158 files in other folders)
