[package]
name = "moltis-feishu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow            = { workspace = true }
async-trait       = { workspace = true }
futures           = { workspace = true }
reqwest           = { workspace = true, features = ["multipart"] }
prost             = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
secrecy           = { workspace = true }
tokio             = { workspace = true }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }
tokio-util        = { workspace = true }
tracing           = { workspace = true }
url               = { workspace = true }
base64            = { workspace = true }
urlencoding       = { workspace = true }

moltis-channels = { workspace = true }
moltis-common   = { workspace = true }

[features]
default = ["tracing", "metrics"]
tracing = []
metrics = []
